set overflow-y to auto on correct answer

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@ body {
 	color: #333333;
 }
 
+p {
+  margin: 0;
+}
+
 .sidebar {
 	min-height: 450px;
 	margin-top: 25px;
